--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "vue3-jazzicon",
   "version": "0.1.0",
+  "description": "Vue component for danfinlay/jazzicon",
   "private": true,
+  "author": "samuv.eth",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "color": "^3.1.0",
     "core-js": "^3.6.5",
+    "mersenne-twister": "^1.1.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +22,11 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.11.0",
+    "prettier": "^2.2.1",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0"
   },
   "eslintConfig": {
     "root": true,
@@ -38,5 +46,14 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "keywords": [
+    "vue",
+    "component",
+    "jazzicon",
+    "ethereum",
+    "metamask",
+    "identicon"
+  ],
+  "license": "MIT"
 }
